# html-outliner

./: .gitattributes  Cargo.toml  README.md
src/: heading.rs  lib.rs  outline.rs  outline_structure.rs  sectioning_type.rs
tests/: outline.rs
tests/data/: 1.html  1.txt  10.html  10.txt  11.html  11.txt  2.html  3.html  4.html  5.html  5.txt  6.html  6.txt  7.html  7.txt  8.html  8.txt  9.html  9.txt
