[package]
name = "html-outliner"
version = "0.1.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/html-outliner"
homepage = "https://magiclen.org/rust-html-outliner"
keywords = ["html", "outline", "outliner"]
categories = ["parser-implementations"]
description = "Outline HTML documents for better SEO."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
kuchiki = "0.8"
regex = "1"
once_cell = "1"